<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ViewMovie">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvNameRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/rating"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvMovieActors" />

            <TextView
                android:id="@+id/tvNameActors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/actors"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvMovieGenres" />

            <TextView
                android:id="@+id/tvNameGenres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/genres"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

            <TextView
                android:id="@+id/tvtitle"
                android:layout_width="317dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/textview"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageViewMovie"
                android:layout_width="173dp"
                android:layout_height="167dp"
                android:layout_marginStart="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvtitle"
                app:layout_constraintVertical_bias="0.035"
                app:srcCompat="@drawable/icon"
                android:contentDescription="@string/image_movie" />

            <com.like.LikeButton
                android:id="@+id/like_button_view_movie"
                android:layout_width="52dp"
                android:layout_height="60dp"
                android:layout_alignParentTop="false"
                android:layout_alignParentEnd="false"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:icon_size="12dp"
                app:icon_type="heart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMovieGenres"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvNameGenres" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMovieActors"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvNameActors" />

            <TextView
                android:id="@+id/tvNameDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/description"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewMovie" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/textview"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvNameDescription" />

            <TextView
                android:id="@+id/tvRenevue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/textview"
                android:textAlignment="textStart"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/imageViewMovie"
                app:layout_constraintTop_toBottomOf="@+id/tvDirector" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/textview"
                android:textAlignment="textStart"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/imageViewMovie"
                app:layout_constraintTop_toBottomOf="@+id/tvtitle" />

            <TextView
                android:id="@+id/tvDirector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="36dp"
                android:text="@string/textview"
                android:textAlignment="textStart"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/imageViewMovie"
                app:layout_constraintTop_toBottomOf="@+id/tvTime" />

            <RatingBar
                android:id="@+id/ratingBarMovie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:isIndicator="true"
                android:theme="@style/RatingBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvNameRating" />

            <TextView
                android:id="@+id/tvNumberRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:text="@string/textview"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/ratingBarMovie"
                app:layout_constraintTop_toBottomOf="@+id/tvNameRating" />

            <TextView
                android:id="@+id/tvVotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="12dp"
                android:text="@string/textview"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ratingBarMovie" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>